tests/errors/malformed_reply.ki
var parse = import("smtp.parse")
discard parse.parse_reply_line("this is not a reply line")
